--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85eaeff8",
+   "metadata": {},
+   "source": [
+    "- df.shape\n",
+    "- df.info()\n",
+    "- df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f2cfbd64",
    "metadata": {},
    "source": [
@@ -42,12 +52,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1c92fbbf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Dimension Reduction"
+   ]
   },
   {
    "cell_type": "code",
@@ -58,19 +68,109 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "be25c92f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Estrutura de um Modelo de Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e23677f6",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://cdn-images-1.medium.com/max/1000/1*ZiYvylk60EY2XG7ck1lqJA.png\" width=500>\n",
+    "\n",
+    "- **Conjunto de dados de treino**: são os dados utilizados para a construção do modelo, os dados que o modelo utilizará \"para aprender\";\n",
+    "\n",
+    "\n",
+    "- **Conjunto de dados de validação**: conjunto de dados usados para testar o modelo e aprimorar a sua performance, seja na seleção de hyperparâmetros/seleção de modelo;\n",
+    "\n",
+    "\n",
+    "- **Treinamento do modelo**: é a etapa em que cálculos matemáticos são feitos para que a equação que descreve o modelo seja criada! É assim que \"o modelo aprende!\";\n",
+    "\n",
+    "\n",
+    "- **Seleção de hiperparâmetros/seleção de modelo**: etapa em que os hiperperâmetros que constituem o modelo são selecionados. Aqui, técnicas como **grid search** e **cross validation** são muito importantes! Falaremos disso mais tarde.\n",
+    "\n",
+    "\n",
+    "- **Conjunto de dados de teste**: conjunto de dados utilizado para testar o modelo após ele ter sido treinado. Essa é a melhor forma de simular o modelo em produção ou podemos dizer \"na vida real\", onde o nosso modelo será testado com dados que ele nunca viu;\n",
+    "\n",
+    "\n",
+    "- **Avaliação**: forma de avaliar a performance do modelo. Há várias métricas e formas diferentes de avaliação, que conheceremos melhor mais tarde."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c5ae278",
+   "metadata": {},
+   "source": [
+    "## Split Train Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "699eaab4",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = df.drop(columns=target)\n",
+    "y = df.target\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,\n",
+    "                                                    y,\n",
+    "                                                    test_size=0.3,\n",
+    "                                                    random_state=42,\n",
+    "                                                    stratify=y)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48676361",
+   "metadata": {},
+   "source": [
+    "## Métricas de Avaliação"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7743c58c",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3567026e",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://static.packt-cdn.com/products/9781838555078/graphics/C13314_06_05.jpg\" width=400>\n",
+    "\n",
+    "Visto isso, as seguintes métricas numéricas de avaliação são bastante comuns na avaliação de modelos de classificação:\n",
+    "\n",
+    "- Acurácia (Accuracy): porcentagem de classificações CORRETAS do modelo;\n",
+    "\n",
+    "- Precisão (Precision): das respostas retornadas, quantas são relevantes? -- é a razão entre verdadeiros positivos e o  número de **preditos positivos**, isto é, positivos quanto à **label predita pelo modelo**.\n",
+    "\n",
+    "- Revocação/Sensibilidade (Recall/Sensitivity): das respostas relevantes, quantas são retornadas? -- é a razão entre verdadeiros positivos e o  número de **verdadeiramente positivos**, isto é, positivos quanto à **label real**.\n",
+    "\n",
+    "- F1-Score: média harmônica de precision e recall.\n",
+    "\n",
+    "<img src=\"https://miro.medium.com/max/1080/1*t1vf-ofJrJqtmam0KSn3EQ.png\" height=\"400\" width=\"400\">"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d6b9927c",
    "metadata": {},
    "source": [
-    "# Modelos de Classificação"
+    "# Supervisionados"
    ]
   },
   {
@@ -78,7 +178,7 @@
    "id": "5bbebe01",
    "metadata": {},
    "source": [
-    "## Supervisionados"
+    "## Modelos de Classificação"
    ]
   },
   {
@@ -139,22 +239,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d43c0454",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65d2c7a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "9a30b16c",
    "metadata": {},
@@ -162,6 +246,7 @@
     "```python\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "dtc = DecisionTreeClassifier()\n",
+    "dtc.get_params() # Apresentar como o modelo está parametrizado\n",
     "dtc.fit(X_train, y_train)\n",
     "y_pred = dtc.predict(X_test)\n",
     "```"
@@ -306,59 +391,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ea3d392",
+   "metadata": {},
+   "source": [
+    "Função para comparar feature por feature e buscar as correlações da base\n",
+    "\n",
+    "**O parâmetro \"hue\" é o discretizador da curva, ou seja, o seu target**\n",
+    "\n",
+    "Dessa forma, é bom buscar o formato da distribuição da feature com ela mesma. Se as curvas do hue forem muito diferentes, podem trazer algum insight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "128eaf32",
    "metadata": {},
    "source": [
-    "sns.pairplot(df, hue=label)"
+    "- sns.pairplot(df, hue=label)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "39249489",
    "metadata": {},
-   "source": []
+   "source": [
+    "## CountPlot"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b139f129",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "44850a7a",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e81a5eb",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e235cdea",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "676e3ee2",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e69eac81",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a802e0e1",
-   "metadata": {},
-   "source": []
+   "source": [
+    "- sns.countplot(feature, normalize=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -366,10 +431,7 @@
    "id": "ff90eb73",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
