Iniciando árvores de regressão em ML e adicionado CNN em DL

--- a/Caderno - DL.ipynb
+++ b/Caderno - DL.ipynb
@@ -32,25 +32,33 @@
    "cell_type": "markdown",
    "id": "39249489",
    "metadata": {},
-   "source": []
+   "source": [
+    "## CNN - Data Augmentation"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b139f129",
    "metadata": {},
-   "source": []
+   "source": [
+    "Rede Simples https://colab.research.google.com/drive/1qTb08ChUmq0gVWCbW8xOOgOCQfXFiARt"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "44850a7a",
    "metadata": {},
-   "source": []
+   "source": [
+    "Rede Simples - Data Augmentation https://colab.research.google.com/drive/1R9hhadhSuOLxFXJxFwt2ZDVs0KO8UOC-"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "8e81a5eb",
    "metadata": {},
-   "source": []
+   "source": [
+    "Rede Pré-Treinada https://colab.research.google.com/drive/15KwlLL_-TVuiGeKsqI6RPEVdRZk_wL-G"
+   ]
   },
   {
    "cell_type": "markdown",
