--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -245,7 +245,8 @@
    "source": [
     "```python\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "dtc = DecisionTreeClassifier()\n",
+    "dtc = DecisionTreeClassifier(random_state=42,\n",
+    "                             max_depth=n) # A profundidade da árvore evita overfiting\n",
     "dtc.get_params() # Apresentar como o modelo está parametrizado\n",
     "dtc.fit(X_train, y_train)\n",
     "y_pred = dtc.predict(X_test)\n",
@@ -372,6 +373,38 @@
     "- Calcular log é mais caro computacionalmente\n",
     "- A \"vantagem\" logaritmica é justamente quando o valor percorre uma gama grande de valores"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fa6c01",
+   "metadata": {},
+   "source": [
+    "### Decision Tree Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07cc14df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a5fa593",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4a72570",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
