caderno ml pra fazer em gru

--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -231,6 +231,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a84e0486",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "cfc8d1d9",
    "metadata": {},
@@ -376,6 +384,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5bbebe01",
+   "metadata": {},
+   "source": [
+    "## Modelos de Regressão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "03fa6c01",
    "metadata": {},
    "source": [
@@ -383,12 +399,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "07cc14df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "* Regressão é o método estatístico para estimar o relacionamento entre duas variáveis (dependente/alvo e independente/preditoras)"
+   ]
   },
   {
    "cell_type": "code",
@@ -402,6 +419,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a4a72570",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bbebe01",
+   "metadata": {},
+   "source": [
+    "## Modelos de Clusterização"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60879852",
    "metadata": {},
    "outputs": [],
    "source": []
