Atualizando ML com métricas de avaliação

--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -20,6 +20,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2e95ca6",
+   "metadata": {},
+   "source": [
+    "## Categorização de Feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b440e0ea",
+   "metadata": {},
+   "source": [
+    "### OneHotEncode ou GetDummies\n",
+    "\n",
+    "- Criação de uma feature para cada categoria\n",
+    "\n",
+    "```python\n",
+    "    from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "    hot = OneHotEncoder()\n",
+    "    y_train = hot.fit_transform(y_train)\n",
+    "    y_test = hot.transform(y_test)\n",
+    "```\n",
+    "\n",
+    "### Label Encoder\n",
+    "\n",
+    "- A categorização se mantém em uma única feature, porém cada uma delas é atrelada a um valor numérico SEQUENCIAL\n",
+    "- Tal ordenação pode gerar certos problemas de \"ordem\" entre as categorias \n",
+    "- Normalmente os algorítimos baseados em distância sofrem com essa categorização (KNN, K-Means, Regressão Logística)\n",
+    "\n",
+    "Ex: Níveis de Escolaridade\n",
+    "\n",
+    "```python\n",
+    "    df.col = df.col.replace[{'label1':0, 'label2':1, 'label3':2}]\n",
+    "```\n",
+    "\n",
+    "### Discretização\n",
+    "\n",
+    "- Criar rótulos que agrupam as categorias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f2cfbd64",
    "metadata": {},
    "source": [
@@ -46,9 +88,9 @@
     "- Arvore de Decisão\n",
     "- Randon Forest\n",
     "  \n",
-    "2. Tipos\n",
-    "    - Normalization\n",
-    "    - Standardization"
+    "##### 2. Tipos\n",
+    "- Normalization\n",
+    "- Standardization"
    ]
   },
   {
@@ -60,16 +102,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "445ab5ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "be25c92f",
+   "id": "445ab5ff",
    "metadata": {},
    "source": [
     "# Estrutura de um Modelo de Machine Learning"
@@ -77,9 +111,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e23677f6",
+   "id": "be25c92f",
    "metadata": {},
    "source": [
+    "\n",
     "<img src=\"https://cdn-images-1.medium.com/max/1000/1*ZiYvylk60EY2XG7ck1lqJA.png\" width=500>\n",
     "\n",
     "- **Conjunto de dados de treino**: são os dados utilizados para a construção do modelo, os dados que o modelo utilizará \"para aprender\";\n",
@@ -97,33 +132,44 @@
     "- **Conjunto de dados de teste**: conjunto de dados utilizado para testar o modelo após ele ter sido treinado. Essa é a melhor forma de simular o modelo em produção ou podemos dizer \"na vida real\", onde o nosso modelo será testado com dados que ele nunca viu;\n",
     "\n",
     "\n",
-    "- **Avaliação**: forma de avaliar a performance do modelo. Há várias métricas e formas diferentes de avaliação, que conheceremos melhor mais tarde."
+    "- **Avaliação**: forma de avaliar a performance do modelo. Há várias métricas e formas diferentes de avaliação, que conheceremos melhor mais tarde.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c5ae278",
+   "id": "71376e28",
    "metadata": {},
    "source": [
-    "## Split Train Test"
+    "## Particionamento de Base"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "699eaab4",
+   "id": "0e656621",
    "metadata": {},
    "source": [
-    "```python\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "### Holdout (Split Train Test)\n",
     "\n",
-    "X = df.drop(columns=target)\n",
-    "y = df.target\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,\n",
-    "                                                    y,\n",
-    "                                                    test_size=0.3,\n",
-    "                                                    random_state=42,\n",
-    "                                                    stratify=y)\n",
-    "```"
+    "```python\n",
+    "    from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "    X = df.drop(columns=target)\n",
+    "    y = df.target\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X,\n",
+    "                                                        y,\n",
+    "                                                        test_size=0.3,\n",
+    "                                                        random_state=42,\n",
+    "                                                        stratify=y)\n",
+    "```\n",
+    "\n",
+    "### Cross-Validation\n",
+    "\n",
+    "- Realiza k treinamentos (alternando a base de treinamento em k vezes)\n",
+    "- Método de particionamento de dados iterativo\n",
+    "- A base de treino é dividida entre treino e validação diversas vezes para garantir maior quantidade de ambiente de treino\n",
+    "- Vantagens: garante que o desempenho do algoritmo será bom independente da seleção dos dados de validação\n",
+    "- Comum para validar os parâmetros do modelo (Grid Search e Random Search)\n"
    ]
   },
   {
@@ -136,31 +182,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7743c58c",
+   "id": "3567026e",
    "metadata": {},
    "source": [
     "```python\n",
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(y_test, y_pred))\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3567026e",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "<img src=\"https://static.packt-cdn.com/products/9781838555078/graphics/C13314_06_05.jpg\" width=400>\n",
     "\n",
     "Visto isso, as seguintes métricas numéricas de avaliação são bastante comuns na avaliação de modelos de classificação:\n",
     "\n",
-    "- Acurácia (Accuracy): porcentagem de classificações CORRETAS do modelo;\n",
+    "- Acurácia (Accuracy): porcentagem de classificações CORRETAS do modelo; <b> Predição Correta / Predição Total </b> (Problema com bases desbalanceadas)\n",
     "\n",
-    "- Precisão (Precision): das respostas retornadas, quantas são relevantes? -- é a razão entre verdadeiros positivos e o  número de **preditos positivos**, isto é, positivos quanto à **label predita pelo modelo**.\n",
+    "- Precisão (Precision): das respostas retornadas, quantas são relevantes? -- <b> Predição 1 / (Predição Correta 1 + Predição Incorreta 1) </b> (Foca no Falso Positivo)\n",
     "\n",
-    "- Revocação/Sensibilidade (Recall/Sensitivity): das respostas relevantes, quantas são retornadas? -- é a razão entre verdadeiros positivos e o  número de **verdadeiramente positivos**, isto é, positivos quanto à **label real**.\n",
+    "- Revocação/Sensibilidade (Recall/Sensitivity): das respostas relevantes, quantas são retornadas? -- <b> Predição 1 / (Predição Correta 1 + Predição Incorreta 0) </b> (Foca no Falso Negativo)\n",
     "\n",
-    "- F1-Score: média harmônica de precision e recall.\n",
+    "- F1-Score: média harmônica de precision e recall. (Interessante como métrica única)\n",
     "\n",
     "<img src=\"https://miro.medium.com/max/1080/1*t1vf-ofJrJqtmam0KSn3EQ.png\" height=\"400\" width=\"400\">"
    ]
@@ -425,6 +465,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6b9927c",
+   "metadata": {},
+   "source": [
+    "# Não Supervisionados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5bbebe01",
    "metadata": {},
    "source": [
@@ -434,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60879852",
+   "id": "0ef17ff5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -490,86 +538,6 @@
    "source": [
     "- sns.countplot(feature, normalize=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff90eb73",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bab83133",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "109c8755",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eec96bb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffb477f7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caeb4445",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e42224c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfd758c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a455447",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "766aacd7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
