--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -88,9 +88,16 @@
     "- Arvore de Decisão\n",
     "- Randon Forest\n",
     "  \n",
-    "##### 2. Tipos\n",
-    "- Normalization\n",
-    "- Standardization"
+    "#### Tipos\n",
+    "##### Standardization (Padronização - Quantos desvios padrões da média)\n",
+    "```python\n",
+    "    from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "    scaler = StandardScaler()\n",
+    "    x_train_std = scaler.fit_transform(x_train) # z_scaler - O fit salva a média e o desvio padrão para aplicar a Padronização\n",
+    "    x_val_std = scaler.transform(x_val) # aplicar a padronização\n",
+    "```\n",
+    "##### Normalization (Valor / Valor_Max)"
    ]
   },
   {
@@ -169,7 +176,17 @@
     "- Método de particionamento de dados iterativo\n",
     "- A base de treino é dividida entre treino e validação diversas vezes para garantir maior quantidade de ambiente de treino\n",
     "- Vantagens: garante que o desempenho do algoritmo será bom independente da seleção dos dados de validação\n",
-    "- Comum para validar os parâmetros do modelo (Grid Search e Random Search)\n"
+    "- Comum para validar os parâmetros do modelo (Grid Search e Random Search)\n",
+    "\n",
+    "```python\n",
+    "    from sklearn.model_selection import cross_validate\n",
+    "    from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "    clf = DecisionTreeClassifier(random_state= 42)\n",
+    "    cv_results = cross_validate(clf, x_train, y_train, cv=5, scoring=['mean_squared_error', 'accuracy_score'], return_train_score= True)\n",
+    "    print(cv_results['test_mean_squared_error'])\n",
+    "    print(cv_results['train_accuracy_score'])\n",
+    "```"
    ]
   },
   {
@@ -269,14 +286,6 @@
     " - C\n",
     " - Solver"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a84e0486",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -424,6 +433,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53ce48a8",
+   "metadata": {},
+   "source": [
+    "### KNN Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64105ac9",
+   "metadata": {},
+   "source": [
+    "Algoritmo de Classificação com embasamento na distância entre as amostras.\n",
+    "Dessa forma dentro de um raio de \"K\" vizinhos analisados é realizado a classificação da amostra nos labels disponíveis\n",
+    "\n",
+    "* Problemas com normalização por considerar distâncias\n",
+    "* Sem aprendizado, a cada amostra nova o algoritmo é executado novamente\n",
+    "\n",
+    "```python\n",
+    "    from sklearn.metrics import classification_report, confusion_matrix\n",
+    "    from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "    knn = KNeighborsClassifier(n_neighbors:int, metric:str)\n",
+    "    knn.fit(x_train, y_train)\n",
+    "    y_pred = knn.predict(y_test)\n",
+    "    classification_report(y_test, y_pred)\n",
+    "    confusion_matrix(y_test, y_pred)\n",
+    "```\n",
+    "\n",
+    "#### Métricas de Distância\n",
+    "* Minkowski (p=2) [Generalização da distância Euclidiana]\n",
+    "* Euclidiano (p=2)\n",
+    "* Manhatam (p=1)\n",
+    "* Mahalanobis (p=2) [Normalização em relação à variância]\n",
+    "* Chebyshev (p=infinito quando vertical)\n",
+    "\n",
+    "#### Otimizando o \"K\"\n",
+    "* Testar a acurácia entre treino e validação/teste\n",
+    "* Elbow Method (Focar na questão de minimização de erro)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5bbebe01",
    "metadata": {},
    "source": [
@@ -448,19 +499,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4a5fa593",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### KNN Regression"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a4a72570",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -538,6 +587,22 @@
    "source": [
     "- sns.countplot(feature, normalize=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766aacd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a381543",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
