--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -5,7 +5,7 @@
    "id": "129c31ee",
    "metadata": {},
    "source": [
-    "# Preprocessamento"
+    "# <font color=#FFCC66> Preprocessamento </font>"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "id": "c2e95ca6",
    "metadata": {},
    "source": [
-    "## Categorização de Feature"
+    "## <font color=#33CC66> Categorização de Feature </font>"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "id": "f2cfbd64",
    "metadata": {},
    "source": [
-    "## Feature Scaling"
+    "##  <font color=#33CC66> Feature Scaling </font>"
    ]
   },
   {
@@ -90,6 +90,9 @@
     "  \n",
     "#### Tipos\n",
     "##### Standardization (Padronização - Quantos desvios padrões da média)\n",
+    "* <b> Sempre fitar o modelo DEPOIS do split do dataset </b>\n",
+    "<br> Assim, não é vazado informação de teste para o treino\n",
+    "\n",
     "```python\n",
     "    from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -105,7 +108,7 @@
    "id": "1c92fbbf",
    "metadata": {},
    "source": [
-    "## Dimension Reduction"
+    "##  <font color=#33CC66> Dimension Reduction </font>"
    ]
   },
   {
@@ -113,7 +116,7 @@
    "id": "445ab5ff",
    "metadata": {},
    "source": [
-    "# Estrutura de um Modelo de Machine Learning"
+    "# <font color=#FFCC66> Estrutura de um Modelo de Machine Learning </font>"
    ]
   },
   {
@@ -148,7 +151,7 @@
    "id": "71376e28",
    "metadata": {},
    "source": [
-    "## Particionamento de Base"
+    "## <font color=#33CC66> Particionamento de Base </font>"
    ]
   },
   {
@@ -191,10 +194,89 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79c52fd4",
+   "metadata": {},
+   "source": [
+    "## <font color=#33CC66> Tunagem de Modelo </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f80f30b7",
+   "metadata": {},
+   "source": [
+    "<b> ESTATÍSTICAMENTE O RANDOM SEARCH É MELHOR </b>\n",
+    "<br>Isso, pois quando existem muitos hiperparam, acertar aleatóriamente os mais impactantes vale mais que rodar todos um por um\n",
+    "\n",
+    "\n",
+    "* Hiperparâmetro: valores de configuração do modelo\n",
+    "* Parâmetro: valores a serem aprendidos pelo modelo\n",
+    "\n",
+    "* Caputrar os valores de Hiperparâmetros\n",
+    "    <br> model.get_params()\n",
+    "* Primeiro utilizar a busca para <b>encontrar</b> os hiperparâmetros\n",
+    "* Em seguida, utilizar eles para criar o modelo\n",
+    "\n",
+    "\n",
+    "| Grid Search                             | Random Search                                     |\n",
+    "|-----------------------------------------|---------------------------------------------------|\n",
+    "| Preciso preparar e varrer todos valores | Varre alguns valores aleatoriamente               |\n",
+    "| Alto custo de tempo                     | Menor custo de tempo, pois não vamos varrer todos |\n",
+    "| Pode ser paralelizado                   | Pode ser paralelizado                             |\n",
+    "|                                         | Podemos otimizar (Não só para esse método)        |\n",
+    "\n",
+    "\n",
+    "\n",
+    "### GridSearch\n",
+    "```python\n",
+    "    from sklearn.Neighbors import KNeighborsClassifier\n",
+    "    from sklearn. import StandardScaler\n",
+    "    from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "    model = KNeighborsClassifier()\n",
+    "    X_std = scaler.fit_transform(X)\n",
+    "    espaco_hiperparm = {\n",
+    "        'n_neighbors': [13, 12, 11, 9, 5, 3, 1]\n",
+    "    }\n",
+    "\n",
+    "    grid_search = GridSearchCV(model, espaco_hiperparm, cv=5)\n",
+    "    search = grid_search.fit(X_std, y_train)\n",
+    "    print(grid_search.best_params_)\n",
+    "    display(pd.DataFrame(grid_search.cv_results_))    \n",
+    "```\n",
+    "\n",
+    "### RandomSearch\n",
+    "* n_iter : quantidade de iterações a se realizar pelo modelo\n",
+    "\n",
+    "```python\n",
+    "    from sklearn.Neighbors import KNeighborsClassifier\n",
+    "    import numpy as np\n",
+    "    from sklearn. import StandardScaler\n",
+    "    from sklearn.model_selection import RandomizeSearchCV\n",
+    "\n",
+    "    model = KNeighborsClassifier()\n",
+    "    X_std = scaler.fit_transform(X)\n",
+    "    espaco_hiperparm = {\n",
+    "        'n_neighbors': np.arange(3, 11),\n",
+    "        'p': np.arange(1, 3) # Para grau arbitrário é usado Minkowski com p = n\n",
+    "    }\n",
+    "\n",
+    "    rand_search = RandomizeSearchCV(model, espaco_hiperparm, cv=5, n_iter=n)\n",
+    "    search = rand_search.fit(X_std, y_train)\n",
+    "    print(rand_search.best_params_)\n",
+    "    display(pd.DataFrame(rand_search.cv_results_))\n",
+    "\n",
+    "    guardar_dados = csv.params e csv.mean_test_score\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "48676361",
    "metadata": {},
    "source": [
-    "## Métricas de Avaliação"
+    "## <font color=#33CC66> Métricas de Avaliação </font>"
    ]
   },
   {
@@ -227,7 +309,7 @@
    "id": "d6b9927c",
    "metadata": {},
    "source": [
-    "# Supervisionados"
+    "#  <font color=#FFCC66> Supervisionados </font>"
    ]
   },
   {
@@ -464,7 +546,7 @@
     "#### Métricas de Distância\n",
     "* Minkowski (p=2) [Generalização da distância Euclidiana]\n",
     "* Euclidiano (p=2)\n",
-    "* Manhatam (p=1)\n",
+    "* Manhatam (p=n)\n",
     "* Mahalanobis (p=2) [Normalização em relação à variância]\n",
     "* Chebyshev (p=infinito quando vertical)\n",
     "\n",
@@ -510,14 +592,30 @@
    "cell_type": "markdown",
    "id": "a4a72570",
    "metadata": {},
-   "source": []
+   "source": [
+    "Realiza a regresssão considerando todas as features de X como a variável independente\n",
+    "E a coluna y como variável dependente\n",
+    "\n",
+    "<b> A Métrica Padrão de Erro é R² </b>\n",
+    "\n",
+    "```python\n",
+    "    from sklearn.neighbors import KNeighborsRegressor\n",
+    "    from sklearn.metrics import r2_score\n",
+    "\n",
+    "    knn_reg = KNeighborsRegressor(n_neighbors = k)\n",
+    "    knn_reg.fit(x_train, y_train)\n",
+    "    y_pred = knn_reg.pred(x_val)\n",
+    "    ## É possível buscar funções para plotar a relação do Valor Predito com o Real pelo seaborn\n",
+    "    r2_score(y_test, y_pred)\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d6b9927c",
    "metadata": {},
    "source": [
-    "# Não Supervisionados"
+    "#  <font color=#FFCC66> Não Supervisionados </font>"
    ]
   },
   {
@@ -541,7 +639,7 @@
    "id": "bdd0bb10",
    "metadata": {},
    "source": [
-    "# Data Visualization"
+    "#  <font color=#FFCC66> Data Visualization </font>"
    ]
   },
   {
