--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -202,6 +202,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ecc3c7a4",
+   "metadata": {},
+   "source": [
+    "### <font color=#33FFFF> Grid e Random Search </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f80f30b7",
    "metadata": {},
    "source": [
@@ -227,7 +235,7 @@
     "\n",
     "\n",
     "\n",
-    "### GridSearch\n",
+    "#### GridSearch\n",
     "```python\n",
     "    from sklearn.Neighbors import KNeighborsClassifier\n",
     "    from sklearn. import StandardScaler\n",
@@ -245,7 +253,7 @@
     "    display(pd.DataFrame(grid_search.cv_results_))    \n",
     "```\n",
     "\n",
-    "### RandomSearch\n",
+    "#### RandomSearch\n",
     "* n_iter : quantidade de iterações a se realizar pelo modelo\n",
     "\n",
     "```python\n",
@@ -269,6 +277,53 @@
     "    guardar_dados = csv.params e csv.mean_test_score\n",
     "```\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "166b09c2",
+   "metadata": {},
+   "source": [
+    "### <font color=#33FFFF> Naive Bayes </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc34e3fc",
+   "metadata": {},
+   "source": [
+    "Ele tenta otimizar a pesquisa de hiperparâmetros a partir de probabilidade\n",
+    "<br>Dessa forma, flexiciona os hiperparâmetros e probabilisticamente busca a melhor combinação\n",
+    "\n",
+    "Vamos relembrar da aula de Estatística e Probabilidade sobre a __Teoria Bayesiana__, onde:\n",
+    "    \n",
+    "<img src=\"https://www.kdnuggets.com/wp-content/uploads/bayes-nagesh-1.jpg\" width=600>\n",
+    "\n",
+    "Mas para seguirmos a rigorosamente a Teoria Bayesiana, precisariamos saber todas as distribuição de probabilidade conjuntas e para estimarmos eles seria um bem trabalhoso. Uma forma __simples__ mas __ingênua__ (o que da o nome do modelo de __Naive Bayes__ é assumirmos que as variáveis que descrevem os atributos são __independentes!__\n",
+    " \n",
+    "Partindo de uma para probabilidade \"anterior\" a priori, podemos chegar na \"posterior\" ou posteriori.\n",
+    "\n",
+    "```python\n",
+    "    from skopt import BayesSearchCV\n",
+    "    from sklearn.Neighbors import KNeighborsClassifier\n",
+    "    import numpy as np\n",
+    "    from sklearn. import StandardScaler\n",
+    "    \n",
+    "    model = KNeighborsClassifier()\n",
+    "    X_std = scaler.fit_transform(X)\n",
+    "    espaco_hiperparm = {\n",
+    "        'n_neighbors': (3, 11),\n",
+    "        'p': (1, 3) # Para grau arbitrário é usado Minkowski com p = n\n",
+    "    }\n",
+    "\n",
+    "    bayes_search = BayesSearchCV(model, espaco_hiperparm, cv=5, n_iter=n)\n",
+    "    search = bayes_search.fit(X_std, y_train)\n",
+    "    print(bayes_search.best_params_)\n",
+    "    display(pd.DataFrame(bayes_search.cv_results_))\n",
+    "\n",
+    "    guardar_dados = csv.params e csv.mean_test_score\n",
+    "\n",
+    "```"
    ]
   },
   {
