ML Preparando para o Feature Engeneering

--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -114,6 +114,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "069d680f",
+   "metadata": {},
+   "source": [
+    "##  <font color=#33CC66> Engenharia de Features </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "080ecc14",
+   "metadata": {},
+   "source": [
+    "### <font color=#33FFFF> Dados Faltantes </font>\n",
+    "\n",
+    "#### <font color=#CCCCFF> Média </font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c8aef3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2be1afd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec0d3fa4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d15995f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "445ab5ff",
    "metadata": {},
    "source": [
