ML Feature Engeneering Dados

--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -127,16 +127,49 @@
    "source": [
     "### <font color=#33FFFF> Dados Faltantes </font>\n",
     "\n",
-    "#### <font color=#CCCCFF> Média </font>"
+    "* Verificar o percentual de relevância de <b> Dados Faltantes </b>\n",
+    "* Verificar quantos dados faltantes existem na linha\n",
+    "* Sempre buscar a área de negócios para entender o comportamento dos dados\n",
+    "\n",
+    "* Uma opção é preencher com algum valor e adicionar uma coluna booleana de dado faltante\n",
+    "\n",
+    "```python\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "imputer = SimpleImputer(strategy= 'constant', fill_value= -1)\n",
+    "imputer = imputer.fit(X[[column, ..., n_cols]])\n",
+    "X[column] = imputer.transform(X[[column, ..., n_cols]])\n",
+    "```\n",
+    "\n",
+    "<font color=#CCCCFF> Média </font><br>\n",
+    "<font color=#CCCCFF> Mediana </font><br>\n",
+    "<font color=#CCCCFF> Moda </font><br>\n",
+    "\n",
+    "Opções:<br>\n",
+    "<font color=#CCCCFF> KNNImputer </font><br>\n",
+    "<font color=#CCCCFF> IterativeImputer </font><br>\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "8c8aef3e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### <font color=#33FFFF> Binarização </font>\n",
+    "\n",
+    "* Modificar as features de forma a otimizar resultados\n",
+    "* Definir um threshold e cria uma feature nova classificando se o valor está acima ou abaixo\n",
+    "\n",
+    "```python\n",
+    "from sklearn.preprocessing import Binarizer\n",
+    "\n",
+    "imputer = Binarizer(threshold= value)\n",
+    "imputer = imputer.fit(X[[column, ..., n_cols]])\n",
+    "dados_transformados = imputer.transform(X[[column, ..., n_cols]])\n",
+    "\n",
+    "X[column] = pd.Series(dados_transformados[0])\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
@@ -175,6 +208,7 @@
    "id": "be25c92f",
    "metadata": {},
    "source": [
+    "* FALL BACK!! Variáveis para derrubar o modelo\n",
     "\n",
     "<img src=\"https://cdn-images-1.medium.com/max/1000/1*ZiYvylk60EY2XG7ck1lqJA.png\" width=500>\n",
     "\n",
