ML Métricas de Avaliação - Erros Regressão

--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -68,6 +68,7 @@
     "* Preferência sobre a normalização por contar com desvios padrões e reconhecimento de possíveis outliers\n",
     "* <b> Sempre fitar o modelo DEPOIS do split do dataset </b>\n",
     "<br> Assim, não é vazado informação de teste para o treino\n",
+    "* (valor - média) / (desvio padrão)\n",
     "\n",
     "```python\n",
     "    from sklearn.preprocessing import StandardScaler\n",
@@ -78,7 +79,17 @@
     "```\n",
     "##### Normalization (Valor / Valor_Max)\n",
     "\n",
-    "* É muito mais sensível a outlier por considerar valores de borda"
+    "* É muito mais sensível a outlier por considerar valores de borda\n",
+    "* (valor - min) / (max - min)\n",
+    "\n",
+    "```python\n",
+    "    from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "    scaler = MinMaxScaler()\n",
+    "    scaler = scaler.fit(x_train) # \n",
+    "    print(scaler.data_max, scaler.data_min)\n",
+    "    x_val_std = scaler.transform(x_val) # aplicar a padronização\n",
+    "```"
    ]
   },
   {
@@ -455,6 +466,62 @@
     "\n",
     "<img src=\"https://miro.medium.com/max/1080/1*t1vf-ofJrJqtmam0KSn3EQ.png\" height=\"400\" width=\"400\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22634369",
+   "metadata": {},
+   "source": [
+    "###  <font color=#33FFFF> Cálculo de Erro </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "403e6e2d",
+   "metadata": {},
+   "source": [
+    "#### MAE (Erro Médio Absoluto)\n",
+    "- Média da diferença absoluta entre valor real e predito\n",
+    "\n",
+    "    <img src=\"https://i.imgur.com/BmBC8VW.jpg\" height=\"200\" width=\"400\">\n",
+    "\n",
+    "#### MSE (Erro Médio Quadrático)\n",
+    "- Média da diferença quadrática entre valor real e predito\n",
+    "\n",
+    "    <img src=\"https://i.imgur.com/vB3UAiH.jpg\" height=\"200\" width=\"400\">\n",
+    "\n",
+    "#### RMSE  (Raíz do Erro Médio Absoluto)\n",
+    "- Raíz da média da diferença quadrática entre valor real e predito"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56f3de86",
+   "metadata": {},
+   "source": [
+    "###  <font color=#33FFFF> Curva ROC-AUC </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beacae56",
+   "metadata": {},
+   "source": [
+    "* Curva Roc: Curva probabilistica\n",
+    "* Area Under the Curve (AUC): Medida numérica para comparação\n",
+    "<br><br>\n",
+    "-----------\n",
+    "* Métrica de avaliação cruzada com o intuito de permitir a comparação de desempenho entre modelos\n",
+    "* Variáveis consideradas: Taxa de <b>TP(VP)</b> e <b>FP(FP)</b>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b93b719c",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
