--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -486,15 +486,15 @@
     "- Vantagens: garante que o desempenho do algoritmo será bom independente da seleção dos dados de validação\n",
     "- Comum para validar os parâmetros do modelo (Grid Search e Random Search)\n",
     "\n",
-    "```python\n",
+    "    ```python\n",
     "    from sklearn.model_selection import cross_validate\n",
     "    from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "    clf = DecisionTreeClassifier(random_state= 42)\n",
-    "    cv_results = cross_validate(clf, x_train, y_train, cv=5, scoring=['mean_squared_error', 'accuracy_score'], return_train_score= True)\n",
+    "    cv_results = cross_validate(clf, x_train, y_train, cv=5, scoring=['neg_mean_squared_error', 'accuracy_score'], return_train_score= True)\n",
     "    print(cv_results['test_mean_squared_error'])\n",
     "    print(cv_results['train_accuracy_score'])\n",
-    "```"
+    "    ```"
    ]
   },
   {
@@ -816,10 +816,21 @@
    "id": "f274cf11",
    "metadata": {},
    "source": [
-    " - Penalty\n",
-    " - Max_iter\n",
-    " - C\n",
-    " - Solver"
+    " - Penalty: Regularização (L2, L1 ou ElasticNet);\n",
+    " - Max_iter: Máximo de iterações para convergência;\n",
+    " - C: Inverso do alpha (força da regularização);\n",
+    " - Solver: Algoritmo de otimização para solução (\n",
+    "    For small datasets, ‘liblinear’ is a good choice\n",
+    "    For large ones, ‘sag’ and ‘saga’ are faster;\n",
+    "    For multiclass problems, only ‘newton-cg’, ‘sag’, ‘saga’ and ‘lbfgs’ handle multinomial loss;\n",
+    "    ‘liblinear’ is limited to one-versus-rest schemes.\n",
+    "\n",
+    "    Warning The choice of the algorithm depends on the penalty chosen: Supported penalties by solver:\n",
+    "    ‘newton-cg’ - [‘l2’, ‘none’]\n",
+    "    ‘lbfgs’ - [‘l2’, ‘none’]\n",
+    "    ‘liblinear’ - [‘l1’, ‘l2’]\n",
+    "    ‘sag’ - [‘l2’, ‘none’]\n",
+    "    ‘saga’ - [‘elasticnet’, ‘l1’, ‘l2’, ‘none’])"
    ]
   },
   {
