--- a/Caderno - ML.ipynb
+++ b/Caderno - ML.ipynb
@@ -835,6 +835,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e33b5ce1",
+   "metadata": {},
+   "source": [
+    "##### - Pontos Relevantes\n",
+    "\n",
+    "- As probabilidades do modelo são retornados pelo método: predict_proba()\n",
+    "- R-quadrado ajustado indica qual é a relevância da predição pelas features escolhidas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfc8d1d9",
    "metadata": {},
    "source": [
